# ancarna

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  CHECKLIST.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  WIP.md
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release.yml
config/: default.toml
src/: error.rs  main.rs
src/app/: config.rs  events.rs  mod.rs  state.rs
src/browser/: mod.rs
src/fuzzer/: encoding.rs  engine.rs  mod.rs  payloads.rs  results.rs
src/http/: client.rs  mod.rs  request.rs  response.rs
src/http/auth/: basic.rs  bearer.rs  digest.rs  jwt.rs  mod.rs  oauth2.rs
src/proxy/: history.rs  intercept.rs  mod.rs  server.rs  tls.rs  websocket.rs
src/reporting/: mod.rs
src/reporting/formats/: csv.rs  html.rs  json.rs  markdown.rs  mod.rs
src/scanner/: engine.rs  findings.rs  js_analysis.rs  jwt.rs  mod.rs  param_discovery.rs
src/scanner/active/: mod.rs
src/scanner/active/attacks/: command_injection.rs  mod.rs  path_traversal.rs  request_smuggling.rs  sqli.rs  ssrf.rs  xss.rs  xxe.rs
src/scanner/authz/: mod.rs
src/scanner/graphql/: mod.rs
src/scanner/oob/: interactsh.rs  mod.rs
src/scanner/passive/: mod.rs
src/scanner/passive/rules/: cache.rs  content_type.rs  cookies.rs  cors.rs  csp.rs  csrf.rs  disclosure.rs  headers.rs  js.rs  jwt.rs  mod.rs  permissions_policy.rs  referrer_policy.rs  server_banner.rs
src/scanner/policies/: mod.rs
src/scanner/templates/: executor.rs  matcher.rs  mod.rs  parser.rs  tests.rs
src/scanner/templates/active/: blind-oob.yaml  command-injection.yaml  crlf-injection.yaml  deserialization.yaml  host-header-injection.yaml  ldap-injection.yaml  open-redirect.yaml  path-traversal.yaml  request-smuggling.yaml  sqli-blind.yaml  sqli-error-based.yaml  ssrf.yaml  ssti.yaml  xss-reflected.yaml  xxe.yaml
src/scanner/upload/: mod.rs
src/scope/: mod.rs
src/scripting/: mod.rs
src/session/: mod.rs
src/spider/: mod.rs
src/tui/: layout.rs  mod.rs  terminal.rs  theme.rs
src/tui/widgets/: findings_panel.rs  key_value_editor.rs  mod.rs  proxy_log.rs  request_editor.rs  response_viewer.rs  text_input.rs  tree_navigator.rs
src/workspace/: collections.rs  environments.rs  mod.rs  project.rs  session.rs
src/workspace/import/: curl.rs  har.rs  mod.rs  openapi.rs  postman.rs
